--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
     <h1>Musicos</h1>
     <h1>Melendi</h1>
-    
+    <div><img src="https://cdns-images.dzcdn.net/images/cover/0f69f27f648c0046efe8dc04d6c9cade/1900x1900-000000-80-0-0.jpg " width="500" height="500"></div>
 </body>
 </html>
