--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <h1>Musicos</h1>
     <h1>Melendi</h1>
     <div><img src="https://cdns-images.dzcdn.net/images/cover/0f69f27f648c0046efe8dc04d6c9cade/1900x1900-000000-80-0-0.jpg " width="500" height="500"></div>
+    <div>Ramón Melendi Espina, conocido artísticamente como Melendi, nació el 21 de enero de 1979 en Oviedo, España. Es un destacado cantante y compositor español, conocido por su estilo que combina pop, rock y música latina. Su carrera musical comenzó a despegar en 2005 con el lanzamiento de su álbum debut, "Sin noticias de Holanda," que recibió una cálida acogida por el público y la crítica.</div>
+    
 </body>
 </html>
