--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <div>Gustavo Cerati (1959-2014) fue un músico, cantante, compositor y productor argentino, ampliamente considerado como uno de los artistas más influyentes en la historia del rock en español. Nació el 11 de agosto de 1959 en Buenos Aires, Argentina.</div>
     <h1>Kanye West</h1>
     <div><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgddiDIsjSrNbUq1C-7kwmsK2lqG-ei_YPVA&s " width="500" height="500"></div>
+    <div>Kanye West, nacido el 8 de junio de 1977 en Atlanta, Georgia, y criado en Chicago, es un rapero, productor, diseñador de moda y empresario estadounidense. Es conocido tanto por su música innovadora como por su personalidad controvertida y su influencia en la cultura popular</div>
+    
 
 </body>
 </html>
