--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Kanye West</h1>
     <div><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgddiDIsjSrNbUq1C-7kwmsK2lqG-ei_YPVA&s " width="500" height="500"></div>
     <div>Kanye West, nacido el 8 de junio de 1977 en Atlanta, Georgia, y criado en Chicago, es un rapero, productor, diseñador de moda y empresario estadounidense. Es conocido tanto por su música innovadora como por su personalidad controvertida y su influencia en la cultura popular</div>
-    
+    <h1>Alex G</h1>
 
 </body>
 </html>
