--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgddiDIsjSrNbUq1C-7kwmsK2lqG-ei_YPVA&s " width="500" height="500"></div>
     <div>Kanye West, nacido el 8 de junio de 1977 en Atlanta, Georgia, y criado en Chicago, es un rapero, productor, diseñador de moda y empresario estadounidense. Es conocido tanto por su música innovadora como por su personalidad controvertida y su influencia en la cultura popular</div>
     <h1>Alex G</h1>
+    <div><img src="https://upload.wikimedia.org/wikipedia/commons/9/99/Alex_G%2C_Fort_Presented_by_Converse%2C_SXSW_2015-7294_%2825281945365%29.jpg" width="500" height="500"></div>
 
 </body>
 </html>
