--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     <div>Kanye West, nacido el 8 de junio de 1977 en Atlanta, Georgia, y criado en Chicago, es un rapero, productor, diseñador de moda y empresario estadounidense. Es conocido tanto por su música innovadora como por su personalidad controvertida y su influencia en la cultura popular</div>
     <h1>Alex G</h1>
     <div><img src="https://upload.wikimedia.org/wikipedia/commons/9/99/Alex_G%2C_Fort_Presented_by_Converse%2C_SXSW_2015-7294_%2825281945365%29.jpg" width="500" height="500"></div>
-    <div>Kanye West, nacido el 8 de junio de 1977 en Atlanta, es un influyente rapero y productor estadounidense. Su debut musical llegó con "The College Dropout" en 2004, aclamado por la crítica. Es conocido por sus álbumes innovadores y su marca de moda Yeezy. También ha sido una figura controvertida por sus declaraciones y acciones públicas.</div>
+    <div> Alex G, cuyo nombre real es Alexander Giannascoli, nació el 3 de febrero de 1993 en Philadelphia, Pennsylvania. Es un cantante, compositor y productor independiente conocido por su estilo musical ecléctico que mezcla indie rock, folk, y elementos experimentales. Su carrera despegó con el álbum "DSU" en 2014, y ha lanzado otros trabajos notables como "Rocket" (2017) y "God Save the Animals" (2022). Alex G ha ganado reconocimiento por su enfoque DIY y su habilidad para fusionar géneros de manera innovadora.</div>
+    <h1>Roberto Musso </h1>
+    <div><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d2/Roberto.musso.jpg/640px-Roberto.musso.jpg " width="500" height="500"></div>
+    <div>Roberto Musso es un cantante, compositor y guitarrista uruguayo, reconocido principalmente por ser el líder y vocalista de la banda de rock El Cuarteto de Nos. Nació el 20 de noviembre de 1962 en Montevideo, Uruguay. Desde muy joven mostró interés por la música y en la década de 1980 formó El Cuarteto de Nos junto a su hermano Ricardo Musso y otros músicos. </div>
+    <div>Roberto Musso es conocido principalmente como el vocalista y principal compositor de Buitres, una influyente banda de rock uruguaya. Uno de sus álbumes más representativos es "El jardín de los presentes" (2004), lanzado con Buitres.</div>
     
 </body>
 </html>
